# large_scale_3d-code

./: CMakeLists.txt  README.md  checklocal.bash
src/: CMakeLists.txt
src/matlab/: junsheng_demo1.m  junsheng_demo1_conf.m.template  kit_demo.m  kit_demo_conf.m.template
src/matlab/base/: match_matrix_ecv.m  objmodel_ecv.m  plot_bb.m  plot_prims.m  pose_est.m  ransac_match_objmodel_ecv.m  read2DPrimitives.m  read_CoViS_stereo_file.m  show_obj_with_bbox.m  xmlReadPrimitives.m
src/matlab/data/: Junsheng-2x4_test.txt  Junsheng-2x4_test_quartersize.txt  Junsheng-2x4_train.txt  Junsheng-2x4_train_quartersize.txt  Junsheng_convert_small.sh  Junsheng_extract_primitives.sh  Junsheng_slam_config_skeleton.xml.template  KIT_5k_tex.txt  KIT_5k_tex_first_12.txt  KIT_classlist_2011_08_30.txt  KIT_extract_test_primitives.sh  KIT_extract_train_primitives.sh  KIT_fetch_data.sh  KIT_make_test_stereo_pairs.sh  KIT_make_train_stereo_pairs.sh  KIT_remove_zips.sh  KIT_slam_config_skeleton_for_testset.xml.template  KIT_slam_config_skeleton_for_trainset.xml.template
src/tools/: CMakeLists.txt  render_stereo_pair.cpp
